--- a/Views/AboutPage/AboutPage.cshtml
+++ b/Views/AboutPage/AboutPage.cshtml
@@ -1,16 +1,23 @@
 ﻿@{
     ViewData["Title"] = "About Page";
 }
-<h1>AboutUs</h1>
+<html>
+<head>
+    <title>AboutUs</title>
+</head>
 <!--The View is responsible for presenting the data to the user
  and receiving user input. It is the user interface (UI)component
  that displays information to users and captures their interactions.
  Views receive data from the Controller and render it for the user.
  Views can also handle user input and send it back to the Controller. -->
-
+ 
 <body>
-    <!-- on each HTML page you have h1 to h6 and i used each to seprate different sections. -->
+    <div>
+        <h1>AboutUs</h1>
+    </div>
+    <!-- on each HTML  page you have h1 to h6 and i used each to seprate different sections. -->
     <!-- on this page i added breaks "br" and bolds "b" to give enphasises -->
+    <main class ="container" id="aboutPage">
     <p>
         <h2>
             <b>What Is Love?</b></h2> <br/>
@@ -39,13 +46,13 @@
         from dating and courtship to marriage and family dynamics. Each book is carefully
         selected to offer practical guidance, biblical insights, and encouragement for your
         relationship journey.<br/> <br/>
-        <b>Chronicle Of Elysian Bonds</b> <br />
-        Dive into our Chronicle, where we share insightful articles, personal stories,
+        <b>Blog</b> <br />
+        Dive into our blog, where we share insightful articles, personal stories,
         and practical tips on navigating the complexities of relationships from a Christian perspective.
-        Chronicle Of Elysian Bonds is a space for reflection, learning, and growth as we explore the joys
+        Blog is a space for reflection, learning, and growth as we explore the joys
         and challenges of living out Christ's love in our connections with others.<br/> <br/>
-        <b>Affinity Harmony Analyzer</b> <br />
-        Discover our unique Affinity Harmony Analyzer
+        <b>Love Calculator</b> <br />
+        Discover our unique Affinity Love Calculator
         a tool designed to assess and reflect on the health of your relationship.
         Answer a few simple questions, and receive personalized insights and suggestions
         to strengthen your bond with your partner, family, or friends.<br/>
@@ -58,7 +65,7 @@
         Create a Supportive Community: Emmcn Ord is more than a marketplace; it's a community.
         Join us in sharing stories, asking questions,
         and supporting one another on this exciting journey of building Christ-centered relationships.<br />
-        Facilitate Growth: Our Affinity Harmony Analyzer is designed
+        Facilitate Growth: Our Love Caculator is designed
         to assist you in assessing and growing in your relationships,
         fostering deeper connections in your life.<br/>
         Thank you for choosing Emmcn Orb as your trusted companion on your journey
@@ -68,5 +75,7 @@
         The Lowoue's<br/>
         Owners, Emmcn Orb
     </p>
+    </main>
 </body>
+</html>
 
