--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
-
 <body>
+    <h1>@ViewData["Title"]</h1>
+    <main class="container" id="privacyPage">
     <p>
         <h3>
             <!--Added the <B>bold and <br>break line on this page to make
@@ -67,4 +67,5 @@
         <b>Sharing Your Personal Information</b><br />
         We do not sell, trade, or rent Users' personal identification information to others.
     </div>
+    </main>
 </body>
