--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Emmcnorb.styles.css" asp-append-version="true" />
     <div id="top-layer">
-        <div id="welcome-message"><b>Welcome To Emmcn Orb, Explore Our Collection Of Books, Blog Posts And Calculator </b></div>
+        <div id="welcome-message"><strong>Welcome To Emmcn Orb, Explore Our Collection Of Books, Blog Posts And Calculator </strong></div>
         <div id="welcom-message2"><b>Faithfully connecting hearts, calculating love, offering divine reads, and nurturing souls. Checkout Our BRAND NEW Books Romance Trueness®</b></div>
     </div>
 </head>
