--- a/Views/Blog/InsertBlog.cshtml
+++ b/Views/Blog/InsertBlog.cshtml
@@ -16,12 +16,17 @@
         @Html.TextBoxFor(model => model.PostTitle, new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.PostTitle)
     </div>
-
+    <div class="form-group">
+        @Html.LabelFor(model => model.PostAuthor)
+        @Html.TextAreaFor(model => model.PostAuthor, new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.PostAuthor)
+    </div>
     <div class="form-group">
         @Html.LabelFor(model => model.PostContent)
         @Html.TextAreaFor(model => model.PostContent, new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.PostContent)
     </div>
+
 
     <button type="submit" class="btn btn-primary" id="loginbutton">Create</button>
 }
