--- a/Views/Blog/UpdateBlog.cshtml
+++ b/Views/Blog/UpdateBlog.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- Update.cshtml -->
 @model Blog
 
-<h2>Edit/Update Blog @Model.PostTitle</h2>
+<h2>Edit Blog @Model.PostTitle</h2>
 
 @using (Html.BeginForm("UpdateBlog", "Blog")) //Here "Post was also removed at the end."
 {
@@ -13,6 +13,12 @@
         @Html.LabelFor(model => model.PostTitle)
         @Html.TextBoxFor(model => model.PostTitle, new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.PostTitle)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.PostAuthor)
+        @Html.TextBoxFor(model => model.PostAuthor, new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.PostAuthor)
     </div>
 
     <div class="form-group">
